data/all_generated_tests/raw_wast_tests/br_UnreachableCodeExecution_309.wast
;; 10. **Test Description:**     - Nested `loop` inside a `block`, where `br` mistakenly targets an outer block instead of the loop, followed by `unreachable`.     - **Constraint: Correct Branch Behavior Between Forward/Backward**     - **Differential Behavior: The Wizard Engine should ensure correct backward jumps to avoid this, while WebAssembly might cause control flow error leading to `unreachable`.**

(assert_invalid
  (module
    (func
      (block
        (loop
          (br 1)
          (unreachable)
        )
      )
    )
  )
  "type mismatch"
)